zerocopy-derive/tests/ui-nightly/late_compile_pass.nightly.stderr
error[E0463]: can't find crate for `zerocopy_derive` which `zerocopy` depends on
  --> $DIR/late_compile_pass.rs:10:1
   |
10 | extern crate zerocopy_renamed;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't find crate

error[E0433]: failed to resolve: could not find `pointer` in `imp`
   --> $DIR/../include.rs:138:13
    |
138 |             pointer::{cast::CastSized, BecauseImmutable},
    |             ^^^^^^^ could not find `pointer` in `imp`

error[E0432]: unresolved imports `super::imp::Ptr`, `super::imp::ReadOnly`
   --> $DIR/../include.rs:111:39
    |
111 |         use super::imp::{MaybeUninit, Ptr, ReadOnly};
    |                                       ^^^  ^^^^^^^^ no `ReadOnly` in `util::imp`
    |                                       |
    |                                       no `Ptr` in `util::imp`
    |                                       help: a similar name exists in the module: `str`

error[E0432]: unresolved imports `super::imp::pointer`, `super::imp::ReadOnly`
   --> $DIR/../include.rs:138:13
    |
138 |             pointer::{cast::CastSized, BecauseImmutable},
    |             ^^^^^^^ could not find `pointer` in `imp`
139 |             ReadOnly,
    |             ^^^^^^^^ no `ReadOnly` in `util::imp`

error[E0433]: failed to resolve: could not find `KnownLayout` in `imp`
  --> $DIR/../include.rs:55:21
   |
55 |         super::imp::KnownLayout,
   |                     ^^^^^^^^^^^ could not find `KnownLayout` in `imp`

error[E0433]: failed to resolve: could not find `Immutable` in `imp`
  --> $DIR/../include.rs:56:21
   |
56 |         super::imp::Immutable,
   |                     ^^^^^^^^^ could not find `Immutable` in `imp`

error[E0433]: failed to resolve: could not find `FromBytes` in `imp`
  --> $DIR/../include.rs:57:21
   |
57 |         super::imp::FromBytes,
   |                     ^^^^^^^^^ could not find `FromBytes` in `imp`

error[E0433]: failed to resolve: could not find `IntoBytes` in `imp`
  --> $DIR/../include.rs:58:21
   |
58 |         super::imp::IntoBytes,
   |                     ^^^^^^^^^ could not find `IntoBytes` in `imp`

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/../include.rs:62:7
   |
62 |     #[zerocopy(crate = "zerocopy_renamed")]
   |       ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
64 +     #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
65 |     pub struct AU16(pub u16);
   |

error: cannot find derive macro `TryFromBytes` in this scope
  --> $DIR/late_compile_pass.rs:29:10
   |
29 | #[derive(TryFromBytes)]
   |          ^^^^^^^^^^^^
   |
help: consider importing this derive macro
   |
15 + use zerocopy_derive::TryFromBytes;
   |

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/late_compile_pass.rs:30:3
   |
30 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
31 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
32 | struct TryFromBytes1 {
   |

error: cannot find derive macro `FromZeros` in this scope
  --> $DIR/late_compile_pass.rs:39:10
   |
39 | #[derive(FromZeros)]
   |          ^^^^^^^^^
   |
help: consider importing this derive macro
   |
15 + use zerocopy_derive::FromZeros;
   |

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/late_compile_pass.rs:40:3
   |
40 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
41 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
42 | struct FromZeros1 {
   |

error: cannot find derive macro `FromBytes` in this scope
  --> $DIR/late_compile_pass.rs:49:10
   |
49 | #[derive(FromBytes)]
   |          ^^^^^^^^^
   |
help: consider importing this derive macro
   |
15 + use zerocopy_derive::FromBytes;
   |

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/late_compile_pass.rs:50:3
   |
50 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
51 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
52 | struct FromBytes1 {
   |

error: cannot find derive macro `IntoBytes` in this scope
  --> $DIR/late_compile_pass.rs:59:10
   |
59 | #[derive(IntoBytes)]
   |          ^^^^^^^^^
   |
help: consider importing this derive macro
   |
15 + use zerocopy_derive::IntoBytes;
   |

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/late_compile_pass.rs:60:3
   |
60 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
62 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
63 | struct IntoBytes1 {
   |

error: cannot find derive macro `Unaligned` in this scope
  --> $DIR/late_compile_pass.rs:70:10
   |
70 | #[derive(Unaligned)]
   |          ^^^^^^^^^
   |
help: consider importing this derive macro
   |
15 + use zerocopy_derive::Unaligned;
   |

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/late_compile_pass.rs:71:3
   |
71 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
73 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
74 | struct Unaligned1 {
   |

error: cannot find derive macro `Unaligned` in this scope
  --> $DIR/late_compile_pass.rs:79:10
   |
79 | #[derive(Unaligned)]
   |          ^^^^^^^^^
   |
help: consider importing this derive macro
   |
15 + use zerocopy_derive::Unaligned;
   |

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/late_compile_pass.rs:80:3
   |
80 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
82 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
83 | struct Unaligned2 {
   |

error: cannot find derive macro `Unaligned` in this scope
  --> $DIR/late_compile_pass.rs:87:10
   |
87 | #[derive(Unaligned)]
   |          ^^^^^^^^^
   |
help: consider importing this derive macro
   |
15 + use zerocopy_derive::Unaligned;
   |

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/late_compile_pass.rs:88:3
   |
88 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
90 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
91 | struct Unaligned3 {
   |

error[E0405]: cannot find trait `TryFromBytes` in module `super::imp`
   --> $DIR/../include.rs:110:53
    |
110 |     pub fn test_trivial_is_bit_valid<T: super::imp::TryFromBytes>() {
    |                                                     ^^^^^^^^^^^^ not found in `super::imp`

error[E0405]: cannot find trait `TryFromBytes` in module `super::imp`
   --> $DIR/../include.rs:130:35
    |
130 |         assert!(<T as super::imp::TryFromBytes>::is_bit_valid(ptr));
    |                                   ^^^^^^^^^^^^ not found in `super::imp`

error[E0405]: cannot find trait `TryFromBytes` in module `super::imp`
   --> $DIR/../include.rs:133:45
    |
133 |     pub fn test_is_bit_valid<T: super::imp::TryFromBytes, V: super::imp::IntoBytes>(
    |                                             ^^^^^^^^^^^^ not found in `super::imp`

error[E0405]: cannot find trait `IntoBytes` in module `super::imp`
   --> $DIR/../include.rs:133:74
    |
133 |     pub fn test_is_bit_valid<T: super::imp::TryFromBytes, V: super::imp::IntoBytes>(
    |                                                                          ^^^^^^^^^ not found in `super::imp`

error: aborting due to 27 previous errors

Some errors have detailed explanations: E0405, E0432, E0433, E0463.
For more information about an error, try `rustc --explain E0405`.
